classic-ui: added livesearch to menu
* added live search support for search in menu
* added jquery ui dependences (autocomplete, menu, position)

refs: #1657

Signed-off-by: Ricardo Bartels <ricardo@bitchbrothers.com>

--- a/html/stylesheets/menu.css
+++ b/html/stylesheets/menu.css
@@ -86,3 +86,21 @@ ul {
 	text-decoration: none;
 	padding-left: 20px;
 }
+
+/* Styles for autocomplete */
+
+li.ui-autocomplete-category {
+        padding: 0 5px;
+        height: 26px;
+        color: #ef9f1b;
+        background: #ededed url(../images/menu_bar.gif) top left repeat-x;
+        border-bottom: 1px solid #fff;
+        line-height: 26px;
+        font-size: 11px;
+}
+
+li.ui-menu-item {
+        text-align: left;
+        font-size: 11px;
+        border-bottom: 1px solid white;
+}
