--- a/html/stylesheets/menu.css
+++ b/html/stylesheets/menu.css
@@ -90,21 +90,81 @@ ul {
 /* Styles for autocomplete */
 
 li.ui-autocomplete-category {
-  padding: 0 5px;
-  height: 26px;
-  color: #ef9f1b;
-  background: #ededed url(../images/menu_bar.gif) top left repeat-x;
+  padding: 3px 0px 0px 5px;
+  height: 18px;
+  background: #ededed url(../images/menu_cat_gray.png) top left repeat-x;
   border-bottom: 1px solid #fff;
-  line-height: 26px;
   font-size: 11px;
+}
+
+/* IE hack (as usual) */
+html>body li.ui-autocomplete-category {
+  vertical-align: center;
+  height: auto;
+  min-height: 18px;
 }
 
 li.ui-menu-item {
   text-align: left;
-  font-size: 11px;
+  font-size: 10px;
   border-bottom: 1px solid white;
+  padding: 0 0 0 2px;
+  color: #000;
 }
 
 ul.ui-autocomplete {
-  width: 176px;
+  width: 150px;
+  position: absolute;
+  box-shadow: 0px 8px 16px 0px #666666;
+  -webkit-box-shadow: 0px 8px 16px 0px #666666;
+  -moz-box-shadow: 0px 8px 16px 0px #666666;
+}
+
+.statusgroup {
+  background: #e8e8e8;
+}
+
+.statusOK, .statusUP, .statusRECOVERY {
+	background: #00cc33;
+	background-image: -webkit-linear-gradient(top, #00cc33, #8feaa6); /* For Chrome and Safari */
+	background-image:    -moz-linear-gradient(top, #00cc33, #8feaa6); /* For old Fx (3.6 to 15) */
+	background-image:     -ms-linear-gradient(top, #00cc33, #8feaa6); /* For pre-releases of IE 10*/
+	background-image:      -o-linear-gradient(top, #00cc33, #8feaa6); /* For old Opera (11.1 to 12.0) */
+	background-image:         linear-gradient(to bottom, #00cc33, #8feaa6); /* Standard syntax; must be last */
+}
+
+.statusCRITICAL, .statusDOWN {
+	background: #ff5252;
+	background-image: -webkit-linear-gradient(top, #ff5252, #fda9a9); /* For Chrome and Safari */
+	background-image:    -moz-linear-gradient(top, #ff5252, #fda9a9); /* For old Fx (3.6 to 15) */
+	background-image:     -ms-linear-gradient(top, #ff5252, #fda9a9); /* For pre-releases of IE 10*/
+	background-image:      -o-linear-gradient(top, #ff5252, #fda9a9); /* For old Opera (11.1 to 12.0) */
+	background-image:         linear-gradient(to bottom, #ff5252, #fda9a9); /* Standard syntax; must be last */
+}
+
+.statusWARNING {
+	background: #ffb533;
+	background-image: -webkit-linear-gradient(top, #ffb533, #ffd894); /* For Chrome and Safari */
+	background-image:    -moz-linear-gradient(top, #ffb533, #ffd894); /* For old Fx (3.6 to 15) */
+	background-image:     -ms-linear-gradient(top, #ffb533, #ffd894); /* For pre-releases of IE 10*/
+	background-image:      -o-linear-gradient(top, #ffb533, #ffd894); /* For old Opera (11.1 to 12.0) */
+	background-image:         linear-gradient(to bottom, #ffb533, #ffd894); /* Standard syntax; must be last */
+}
+
+.statusUNKNOWN, .statusUNREACHABLE {
+	background: #db54fd;
+	background-image: -webkit-linear-gradient(top, #db54fd, #eea9ff); /* For Chrome and Safari */
+	background-image:    -moz-linear-gradient(top, #db54fd, #eea9ff); /* For old Fx (3.6 to 15) */
+	background-image:     -ms-linear-gradient(top, #db54fd, #eea9ff); /* For pre-releases of IE 10*/
+	background-image:      -o-linear-gradient(top, #db54fd, #eea9ff); /* For old Opera (11.1 to 12.0) */
+	background-image:         linear-gradient(to bottom, #db54fd, #eea9ff); /* Standard syntax; must be last */
+}
+
+.statusPENDING {
+	background: #73cce3;
+	background-image: -webkit-linear-gradient(top, #73cce3, #c7f2fd); /* For Chrome and Safari */
+	background-image:    -moz-linear-gradient(top, #73cce3, #c7f2fd); /* For old Fx (3.6 to 15) */
+	background-image:     -ms-linear-gradient(top, #73cce3, #c7f2fd); /* For pre-releases of IE 10*/
+	background-image:      -o-linear-gradient(top, #73cce3, #c7f2fd); /* For old Opera (11.1 to 12.0) */
+	background-image:         linear-gradient(to bottom, #73cce3, #c7f2fd); /* Standard syntax; must be last */
 }
